# pytest-sqlalchemy-postgresql

./: .env.example  .gitattributes  MANIFEST.in  docker-compose.yaml  envoy.yml  pytest.ini  requirements.txt  setup.cfg
hack/: run-lab.sh
hack/libraries/: custom-logger.sh
src/app/: __main__.py  config.py  database.py  telemetry.py
src/app/models/: __init__.py
src/fakenamesservice/: __main__.py  config.py  database.py  logging.py  telemetry.py
src/fakenamesservice/models/: crud.py
src/fakenamesservice/repository/: crud.py  models.py  schemas.py
tests/: __init__.py  conftest.py  populate.py  populates_db.py
tests/integration/: fakenames.csv  test_model.py
