# Docs https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = pytest-sqlalchemy
version = file: VERSION
description = Pytest Fixture for SqlAlchemy
long_description = file: README.md
license = MIT
url = https://github.com/testruction/pytest-sqlalchemy
author = Florian JUDITH
author_email = florian.judith.b@gmail.com
keywords =
    sqlalchemy
    postgresql
    docker
    docker-compose

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8

install_requires =
    jwt
    sqlalchemy
    psycopg2-binary
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation-dbapi
    opentelemetry-instrumentation-logging

tests_require =
    pytest
    tox

package_dir =
    = src

[options.package_data]
* = *.json, *.yaml, *.csv, *.sql, VERSION, *.j2, README.md, *.css, *.svg


[options.packages.find]
where = src
